--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.navigationdemo"
+        applicationId "com.example.ZhiNengJiaJuNA"
         minSdk 30
         targetSdk 32
         versionCode 1
